# faster-whisper-app

./: .env.example  .gitignore  ACCESSIBILITY_SETUP.md  CLAUDE.md  Makefile  README.md  build.py  list_devices.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.py  setup.sh  test_app.py  test_hotkey_simple.py
src/faster_whisper_app/: __init__.py  __main__.py  cli.py  config.py
src/faster_whisper_app/core/: __init__.py  exceptions.py  recorder.py  transcriber.py
src/faster_whisper_app/interfaces/: __init__.py  hotkey_handler.py  terminal_interface.py
tests/: __init__.py  test_setup.py
